@@ -153,15 +153,21 @@ class General(GUIBase):
              directive. eg.; [listname %%d] -> [listname 123]
                             (listname %%05d) -> (listname 00123)
              """)),
+          ]
 
-            ('author_is_list', mm_cfg.Radio, (_('No'), _('Yes')), 0,
-             _("""Replace the sender with the list address to conform with
-             policies like ADSP and DMARC.  It replaces the poster's address
-             in the From: header with the list address and adds the poster to
-             the Reply-To: header, but the anonymous_list and Reply-To: header
-             munging settings below take priority.  If setting this to Yes,
-             it is advised to set the MTA to DKIM sign all emails.""")),
+        if mm_cfg.ALLOW_AUTHOR_IS_LIST:
+            rtn.append(
+                ('author_is_list', mm_cfg.Radio, (_('No'), _('Yes')), 0,
+                 _("""Replace the sender with the list address to conform with
+                 policies like ADSP and DMARC.  It replaces the poster's
+                 address in the From: header with the list address and adds the
+                 poster to the Reply-To: header, but the anonymous_list and
+                 Reply-To: header munging settings below take priority.  If
+                 setting this to Yes, it is advised to set the MTA to DKIM sign
+                 all emails."""))
+              )
 
+        rtn.extend([
             ('anonymous_list', mm_cfg.Radio, (_('No'), _('Yes')), 0,
              _("""Hide the sender of a message, replacing it with the list
              address (Removes From, Sender and Reply-To fields)""")),
@@ -382,7 +388,7 @@ class General(GUIBase):
              useful for selecting among alternative names of a host that has
              multiple addresses.""")),
 
-          ]
+          ])
 
         if mm_cfg.ALLOW_RFC2369_OVERRIDES:
             rtn.append(
